tests/lexer/invalid/test_invalid_char.src
// Тест 1: Недопустимые символы
int x = 42;
@invalid
#invalid
$invalid
`invalid